[package]
name = "mast"
version = "0.1.0"
authors = ["theoxao <theoxao@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rusqlite = "0.23.1"
diesel = { version = "1.4.3", features = ["sqlite", "chrono"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
dotenv = "0.15.0"
rppal = "0.11.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_sqlite_pool"]